--- a/samples/addin/DemoAddIn/cs/DemoAddIn/DemoAddIn.csproj
+++ b/samples/addin/DemoAddIn/cs/DemoAddIn/DemoAddIn.csproj
@@ -52,14 +52,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\..\src\SolidEdgeSDK.WPF.cs">
-      <Link>SolidEdgeSDK.WPF.cs</Link>
-    </Compile>
     <Compile Include="..\..\..\..\..\src\SolidEdgeSDK.cs">
       <Link>SolidEdgeSDK.cs</Link>
     </Compile>
-    <Compile Include="My2dRibbon.cs" />
+    <Compile Include="AboutDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutDialog.Designer.cs">
+      <DependentUpon>AboutDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyAddIn.cs" />
+    <Compile Include="MyAddInOld.cs" />
+    <Compile Include="MyCommands.cs" />
     <Compile Include="MyConstants.cs" />
     <Compile Include="MyCustomDialog.cs">
       <SubType>Form</SubType>
@@ -79,9 +83,13 @@
     <Compile Include="MyGlobalEdgeBarControl.Designer.cs">
       <DependentUpon>MyGlobalEdgeBarControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="My3dRibbon.cs" />
-    <Compile Include="My3dViewOverlay.cs" />
+    <Compile Include="MyViewOverlay3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.zh-CN.Designer.cs">
+      <DependentUpon>Resources.zh-CN.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -89,6 +97,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AboutDialog.resx">
+      <DependentUpon>AboutDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyCustomDialog.resx">
       <DependentUpon>MyCustomDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,12 +109,16 @@
     <EmbeddedResource Include="MyGlobalEdgeBarControl.resx">
       <DependentUpon>MyGlobalEdgeBarControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.zh-CN.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.zh-CN.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.zh-CN.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CompileNativeRes.bat" />
